--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<br>
 	<br>
 
-	<a href="index1.html" style="color:blue; font-size:25px">Легенды Барсы</a>
+	<a href="index1.html" style="color:red; font-size:30px">Легенды Барсы</a>
 
 </body>
 </html>
